# Open-Assistant

./: .gitignore
data/datasets/oa_dolly_15k_fi/: create_dataset.py
model/: README.md  get_started.sh  install_apex.sh  pyproject.toml  requirements.txt
model/logs/: latest.err  latest.out  sft_train-3445406.err  sft_train-3445406.out
model/model_training/: .gitignore  README.md  __init__.py  conda.yml  get_started.sh  train.sh  trainer_rl_lumi.py  trainer_rm.py  trainer_sft.py  utils.py
model/model_training/configs/: config.yaml  config_rl.yaml  config_rm.yaml  ppo_config.yaml  zero0_config.json  zero3_config_sft.json  zero_config.json  zero_debug_config.json
model/model_training/custom_datasets/: __init__.py  dialogue_collator.py  formatting.py  instruction.py  oasst_dataset.py  qa_datasets.py  ranking_collator.py
model/model_training/logs/: latest.err  latest.out  sft_train-3445417.err  sft_train-3445417.out
model/model_training/models/: __init__.py  patching.py
model/model_training/slurm/: debug_rm.sh  debug_sft.sh  rl_ppo.sh  rm_train.sh  sft_train.sh
model/model_training/slurm_scripts/: run_tests.sh  sft_train.sh  train.sh
model/model_training/tools/: model_chat.py  model_cli.py
model/model_training/utils/: ppo_utils.py  utils.py
oasst-data/examples/: filter_trees.py  messages_to_trees.py
oasst-data/oasst_data/: reader.py  writer.py
