[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "model_training"
description = "Open Assistant Model Training Module"
version = "1.0.0"
authors = [
    { name = "LAION-AI", email = "contact@laion.ai" }
]

[project.optional-dependencies]
tests = [
  'pytest',
]

[tool.setuptools]
packages = ["model_training"]

[tool.black]
line-length = 120
target-version = ['py310']
